infra/base/openfga/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: openfga
  namespace: the-company
  labels:
    app.kubernetes.io/name: openfga
    app.kubernetes.io/part-of: the-company
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: openfga
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
    - name: grpc
      port: 8081
      targetPort: 8081
      protocol: TCP
